// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="display-flex-space-between spacer-top"
  >
    <SearchFilterContainer
      onQueryChange={[MockFunction]}
      query={
        {
          "search": "test",
        }
      }
    />
    <div
      className="display-flex-center"
    >
      <withCurrentUserContext(ProjectCreationMenu)
        className="little-spacer-right"
      />
      <withCurrentUserContext(withRouter(withAppStateContext(ApplicationCreation)))
        className="little-spacer-right"
      />
      <withCurrentUserContext(HomePageSelect)
        className="spacer-left little-spacer-right"
        currentPage={
          {
            "type": "PROJECTS",
          }
        }
      />
    </div>
  </div>
  <div
    className="big-spacer-top display-flex-space-between"
  >
    <div
      className="display-flex-center"
    >
      <span
        className="projects-total-label"
      >
        <strong
          id="projects-total"
        >
          12
        </strong>
         
        projects_
      </span>
    </div>
    <div
      className="display-flex-center"
    >
      <PerspectiveSelect
        className="projects-topbar-item"
        onChange={[MockFunction]}
        view="overall"
      />
      <div
        className="projects-topbar-item"
      >
        <ProjectsSortingSelect
          defaultOption="analysis_date"
          onChange={[MockFunction]}
          selectedSort="size"
          view="overall"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly while loading 1`] = `
<div
  className="page-header"
>
  <div
    className="display-flex-space-between spacer-top"
  >
    <SearchFilterContainer
      onQueryChange={[MockFunction]}
      query={
        {
          "search": "test",
        }
      }
    />
    <div
      className="display-flex-center"
    >
      <withCurrentUserContext(ProjectCreationMenu)
        className="little-spacer-right"
      />
      <withCurrentUserContext(withRouter(withAppStateContext(ApplicationCreation)))
        className="little-spacer-right"
      />
      <withCurrentUserContext(HomePageSelect)
        className="spacer-left little-spacer-right"
        currentPage={
          {
            "type": "PROJECTS",
          }
        }
      />
    </div>
  </div>
  <div
    className="big-spacer-top display-flex-space-between"
  >
    <div
      className="display-flex-center is-loading"
    >
      <span
        className="projects-total-label"
      >
        <strong
          id="projects-total"
        >
          2
        </strong>
         
        projects_
      </span>
    </div>
    <div
      className="display-flex-center"
    >
      <PerspectiveSelect
        className="projects-topbar-item"
        onChange={[MockFunction]}
        view="overall"
      />
      <div
        className="projects-topbar-item"
      >
        <ProjectsSortingSelect
          defaultOption="analysis_date"
          onChange={[MockFunction]}
          selectedSort="size"
          view="overall"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render switch the default sorting option for anonymous users 1`] = `
<ProjectsSortingSelect
  defaultOption="name"
  onChange={[MockFunction]}
  selectedSort="size"
  view="overall"
/>
`;

exports[`should render switch the default sorting option for anonymous users 2`] = `
<ProjectsSortingSelect
  defaultOption="analysis_date"
  onChange={[MockFunction]}
  selectedSort="size"
  view="leak"
/>
`;
